# bevy_blocky_sampling

./: Cargo.toml  LICENSE  README.md
assets/shaders/: blocky.wgsl
src/: main.rs
